docs/0.10/_sources/api/gammapy.cube.MapEvaluator.rst.txt
MapEvaluator
============

.. currentmodule:: gammapy.cube

.. autoclass:: MapEvaluator
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~MapEvaluator.bin_volume
      ~MapEvaluator.energy_bin_width
      ~MapEvaluator.energy_center
      ~MapEvaluator.energy_edges
      ~MapEvaluator.geom
      ~MapEvaluator.geom_image
      ~MapEvaluator.lat
      ~MapEvaluator.lon
      ~MapEvaluator.lon_lat
      ~MapEvaluator.solid_angle

   .. rubric:: Methods Summary

   .. autosummary::

      ~MapEvaluator.apply_edisp
      ~MapEvaluator.apply_exposure
      ~MapEvaluator.apply_psf
      ~MapEvaluator.compute_dnde
      ~MapEvaluator.compute_flux
      ~MapEvaluator.compute_npred

   .. rubric:: Attributes Documentation

   .. autoattribute:: bin_volume
   .. autoattribute:: energy_bin_width
   .. autoattribute:: energy_center
   .. autoattribute:: energy_edges
   .. autoattribute:: geom
   .. autoattribute:: geom_image
   .. autoattribute:: lat
   .. autoattribute:: lon
   .. autoattribute:: lon_lat
   .. autoattribute:: solid_angle

   .. rubric:: Methods Documentation

   .. automethod:: apply_edisp
   .. automethod:: apply_exposure
   .. automethod:: apply_psf
   .. automethod:: compute_dnde
   .. automethod:: compute_flux
   .. automethod:: compute_npred
